--- a/package.json
+++ b/package.json
@@ -2,10 +2,33 @@
   "name": "finance",
   "module": "src/index.ts",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
+  "scripts": {
+    "dev": "bun --watch src/index.ts",
+    "build": "bun build src/index.ts",
+    "start": "NODE_ENV=production bun src/index.ts",
+    "test": "bun test",
+    "generate": "drizzle-kit generate:pg",
+    "studio": "drizzle-kit studio",
+    "migrate": "bun ./src/infra/db/drizzle/migrate.ts",
+    "seed": "bun ./src/db/seed.ts",
+    "lint": "eslint --fix src --ext ts"
+  },
+  "dependencies": {
+    "@neondatabase/serverless": "^0.9.0",
+    "drizzle": "^1.4.0",
+    "drizzle-orm": "^0.30.7",
+    "elysia": "^1.0.13",
+    "postgres": "^3.4.3",
+    "zod": "^3.22.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "@types/pg": "^8.11.4",
+    "chalk": "^5.3.0",
+    "drizzle-kit": "^0.20.14",
+    "pg": "^8.11.5"
   }
 }
